--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>uk.co.labfour.cloud2</groupId>
-  <artifactId>aaa_client</artifactId>
+    <artifactId>aaa_client</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <dependencies>
+	<dependency>
+	  <groupId>uk.co.labfour.cloud2.aaa</groupId>
+	  <artifactId>aaa_common</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</dependency>
   	<dependency>
   		<groupId>uk.co.labfour.cloud2</groupId>
   		<artifactId>protocol</artifactId>
   	</dependency>
+    <dependency>
+      <groupId>uk.co.labfour.cloud2</groupId>
+      <artifactId>microservice</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </dependency>
   	<dependency>
   		<groupId>uk.co.labfour.cloud2.data</groupId>
   		<artifactId>entity</artifactId>
