--- a/pom.xml
+++ b/pom.xml
@@ -1,80 +1,68 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <artifactId>aaa_client</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <dependencies>
-	<dependency>
-	  <groupId>uk.co.labfour.cloud2.aaa</groupId>
-	  <artifactId>aaa_common</artifactId>
-		<version>1.0-SNAPSHOT</version>
-	</dependency>
-  	<dependency>
-  		<groupId>uk.co.labfour.cloud2</groupId>
-  		<artifactId>protocol</artifactId>
-  	</dependency>
-    <dependency>
-      <groupId>uk.co.labfour.cloud2</groupId>
-      <artifactId>microservice</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
-    </dependency>
-  	<dependency>
-  		<groupId>uk.co.labfour.cloud2.data</groupId>
-  		<artifactId>entity</artifactId>
-  	</dependency>
-  	<dependency>
-  		<groupId>uk.co.labfour</groupId>
-  		<artifactId>bjson</artifactId>
-  	</dependency>
-  	<dependency>
-  		<groupId>uk.co.labfour</groupId>
-  		<artifactId>error</artifactId>
-  	</dependency>
-  	<dependency>
-  		<groupId>uk.co.labfour</groupId>
-  		<artifactId>logger</artifactId>
-  	</dependency>
-  	<dependency>
-  		<groupId>uk.co.labfour.cloud2</groupId>
-  		<artifactId>transport</artifactId>
-  	</dependency>
-  </dependencies>
-  <parent>
-  	<groupId>uk.co.labfour.cloud2</groupId>
-  	<artifactId>parent-pom</artifactId>
-  	<version>0.0.1</version>
-  </parent>
-  <dependencyManagement>
-  	<dependencies>
-  		<dependency>
-  			<groupId>uk.co.labfour.cloud2</groupId>
-  			<artifactId>protocol</artifactId>
-  			<version>0.0.1-SNAPSHOT</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>uk.co.labfour.cloud2.data</groupId>
-  			<artifactId>entity</artifactId>
-  			<version>0.0.1-SNAPSHOT</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>uk.co.labfour</groupId>
-  			<artifactId>bjson</artifactId>
-  			<version>0.0.1</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>uk.co.labfour</groupId>
-  			<artifactId>error</artifactId>
-  			<version>0.0.1</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>uk.co.labfour</groupId>
-  			<artifactId>logger</artifactId>
-  			<version>0.0.1</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>uk.co.labfour.cloud2</groupId>
-  			<artifactId>transport</artifactId>
-  			<version>0.0.1</version>
-  		</dependency>
-  	</dependencies>
-  </dependencyManagement>
+    <version>0.0.2</version>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>bsh-central</id>
+            <name>bsh-releases</name>
+            <url>http://artifactory.labfour.co.uk/artifactory/libs-release</url>
+        </repository>
+        <snapshotRepository>
+            <id>bsh-snapshots</id>
+            <uniqueVersion>true</uniqueVersion>
+            <name>bsh-snapshots</name>
+            <url>http://artifactory.labfour.co.uk/artifactory/libs-snapshot</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <parent>
+        <groupId>uk.co.labfour.cloud2</groupId>
+        <artifactId>parent-pom</artifactId>
+        <version>0.0.2</version>
+    </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>uk.co.labfour.cloud2.aaa</groupId>
+            <artifactId>aaa_common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>uk.co.labfour.cloud2</groupId>
+            <artifactId>protocol</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>uk.co.labfour.cloud2</groupId>
+            <artifactId>microservice</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>uk.co.labfour.cloud2.data</groupId>
+            <artifactId>entity</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>uk.co.labfour</groupId>
+            <artifactId>bjson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>uk.co.labfour</groupId>
+            <artifactId>error</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>uk.co.labfour</groupId>
+            <artifactId>logger</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>uk.co.labfour.cloud2</groupId>
+            <artifactId>transport</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
